op5_defconfig: Enable SOUND_CONTROL

--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -3130,6 +3130,7 @@ CONFIG_SND_SOC_CPE=y
 # CONFIG_SND_SOC_INT_CODEC is not set
 # CONFIG_SND_SOC_EXT_CODEC is not set
 CONFIG_SND_SOC_MSM8998=y
+CONFIG_SOUND_CONTROL=y
 # CONFIG_SND_SOC_QCOM is not set
 
 #
