--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -1,6 +1,6 @@
 CONFIG_VENDOR_ONEPLUS=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=8
-CONFIG_LOCALVERSION="-lineage"
+CONFIG_LOCALVERSION="-IceColdKernel"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
