--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -6,6 +6,7 @@
 # AICP
 CONFIG_SOUND_CONTROL=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 
 CONFIG_VENDOR_ONEPLUS=y
 CONFIG_ARM64=y
