--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -9,6 +9,7 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_WIREGUARD=y
 CONFIG_EXFAT_FS=y
+CONFIG_SLAB_FREELIST_RANDOM=y
 
 CONFIG_VENDOR_ONEPLUS=y
 CONFIG_ARM64=y
