oneplus5_defconfig: Enable CONFIG_SLAB_FREELIST_HARDENED

--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -10,6 +10,7 @@ CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_WIREGUARD=y
 CONFIG_EXFAT_FS=y
 CONFIG_SLAB_FREELIST_RANDOM=y
+CONFIG_SLAB_FREELIST_HARDENED=y
 
 CONFIG_VENDOR_ONEPLUS=y
 CONFIG_ARM64=y
