oneplus5_defconfig: disable SLAB_MERGE_DEFAULT

--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -11,6 +11,7 @@ CONFIG_WIREGUARD=y
 CONFIG_EXFAT_FS=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
+# CONFIG_SLAB_MERGE_DEFAULT is not set
 
 CONFIG_VENDOR_ONEPLUS=y
 CONFIG_ARM64=y
