--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -12,6 +12,7 @@ CONFIG_EXFAT_FS=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 # CONFIG_SLAB_MERGE_DEFAULT is not set
+CONFIG_FORTIFY_SOURCE=y
 
 CONFIG_VENDOR_ONEPLUS=y
 CONFIG_ARM64=y
