oneplus5_defconfig: Remove unused/unneeded options

--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -2069,7 +2069,6 @@ CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_MSM_SMD_PKT is not set
 # CONFIG_XILLYBUS is not set
 CONFIG_MSM_ADSPRPC=y
-# CONFIG_MSM_RDBG is not set
 
 #
 # I2C support
@@ -2778,13 +2777,10 @@ CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
 CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
 # CONFIG_MSM_AIS is not set
-CONFIG_DVB_MPQ=y
-CONFIG_DVB_MPQ_DEMUX=y
 CONFIG_DVB_MPQ_NUM_DMX_DEVICES=4
 CONFIG_DVB_MPQ_TSPP1=y
 # CONFIG_DVB_MPQ_SW is not set
 # CONFIG_DVB_MPQ_MEDIA_BOX_DEMUX is not set
-CONFIG_TSPP=y
 
 #
 # Supported MMC/SDIO adapters
@@ -3984,7 +3980,7 @@ CONFIG_RMNET_IPA3=y
 # CONFIG_SSM is not set
 CONFIG_GPIO_USB_DETECT=y
 # CONFIG_MSM_MHI is not set
-CONFIG_MSM_11AD=y
+# CONFIG_MSM_11AD is not set
 # CONFIG_SEEMP_CORE is not set
 CONFIG_USB_BAM=y
 CONFIG_MSM_EXT_DISPLAY=y
