defconfig: build wifi driver in-line
Change-Id: I08a261b22b1f07f2368b73e8b3d040c7f8daf5d0

--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -3931,7 +3931,7 @@ CONFIG_ION_MSM=y
 #
 # Qualcomm Atheros CLD WLAN module
 #
-CONFIG_QCA_CLD_WLAN=m
+CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCACLD_WLAN_LFR3=y
 CONFIG_WLAN_FEATURE_11W=y
 CONFIG_WLAN_FEATURE_LPSS=y
